refactor shell formatting with theme and table